--- a/styles.css
+++ b/styles.css
@@ -2,39 +2,75 @@
 
 body {
   margin: 0;
-  min-height: 100vh;
+  min-height: 150vh;
   display: flex;
   flex: 1;
   flex-direction: column;
   font-family: sans-serif;
 }
 
+h1 {
+  margin-top: 0%;
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+
+h3 {
+  margin-bottom: 0%;
+}
+
+button {
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+ul {
+  display: flex;
+  margin-top: 0%;
+  margin-bottom: 50px;
+  list-style: none;
+  gap: 30px;
+}
+
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding-bottom: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
+
 
 .header-logo {
-  font-size: 24px;
   color: #F9FAF8;
-  flex-wrap: wrap;
 }
 
+
 .hero {
-  font-size: 48px;
+  font-size: 35px;
   color: #F9FAF8;
+  margin-bottom: 0%;
+}
+
+.img-tree {
+  display:flex;
+  flex: 1;
+  justify-content: flex-start;
 }
 
 .footer {
   display: flex;
   justify-content: center;
   padding: 15px;
+  color: darkolivegreen;
 }
 
 .random-information {
   display: flex;
   flex: 1;
+  padding-bottom: 50px;
 }
 
 .quote {
@@ -44,32 +80,43 @@ body {
 }
 
 .call-action {
+  font-size: 20px;
   display: flex;
   flex: 1;
-
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-button {
-  color: #3882F6
-}
-
-ul {
+.call-action-container {
   display: flex;
-  list-style: none;
-  gap: 30px;
+  align-items:center;
+  justify-content: space-around;
+  width: 800px;
+  border-radius: 10px;
+  padding-right: 60px;
+  padding-left: 60px;
 }
 
-.img-tree {
-  display:flex;
-  flex: 1;
+
+#button-border {
+  border: 1px solid white;
 }
+
+#action-text {
+  margin-top: 0%;
+}
+
 .header, .footer {
   background-color: #1F2937;
 }
 
-a, .hero-secondary {
+a, .hero-secondary, #action-text {
   font-size: 18px;
   color:#e5e7eb
-
 }
 
+button, .call-action-container {
+  color: white;
+  background-color: #1e66da;
+}
